<resources>
    <string name="app_name">Pemilu App</string>
    <string name="strip" translatable="false">-</string>
    <string name="colon" translatable="false">:  </string>
    <string name="data_not_found">Data tidak ditemukan</string>

    <!--    main menu-->
    <string name="election_information">Informasi Pemilihan</string>
    <string name="form_entry_data">Form Entri Data</string>
    <string name="show_data">Lihat Data</string>
    <string name="exit">Keluar</string>

    <!--    button-->
    <string name="submit_data">Tambah Data</string>
    <string name="btn_continue">Lanjutkan</string>
    <string name="from_gallery">Galeri</string>
    <string name="from_camera">Kamera</string>

    <!--    hint-->
    <string name="enter_nik">Masukan NIK</string>
    <string name="enter_name">Masukan nama</string>
    <string name="enter_phone">Masukan nomor hp</string>
    <string name="select_date">Pilih tanggal</string>
    <string name="enter_address">Masukan alamat</string>

    <!--    string format-->
    <string name="fill_your_x">Mohon lengkapi data %1$s</string>
    <string name="nik_x">NIK : %1$s</string>
    <string name="io_data_success">%1$s berhasil dilakukan</string>
    <string name="file_path">Lokasi file: %1$s</string>

    <!--    ui-->
    <string name="nik">NIK</string>
    <string name="name">Nama</string>
    <string name="phone">Nomor HP</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="date">Tanggal</string>
    <string name="registration_date">Tanggal Pendataan</string>
    <string name="address">Alamat</string>
    <string name="evidence_process">Bukti Pendataan</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batalkan</string>
    <string name="close">Tutup</string>
    <string name="import_data" translatable="false">Import data</string>
    <string name="export_data" translatable="false">Export data</string>
    <string name="election_data">Data Pemilihan</string>
    <string name="data_detail">Detail Data</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="header_check_nik">Periksa NIK</string>
    <string name="find_voter">Cari NIK, Nama, atau Alamat</string>
    <string name="body_check_nik">NIK akan diperiksa apakah sudah terdaftar atau belum.</string>

    <!--    dialog-->
    <string name="delete_dialog_title">Hapus Data Pemilih?</string>
    <string name="delete_dialog_message">Data pemilih dengan %1$s %2$s akan dihapus dari daftar pemilih.</string>
    <string name="import_dialog_title">Import Data Pemilih?</string>
    <string name="import_dialog_message">Data dari file JSON akan menambahkan atau memperbarui data berdasarkan keberadaan %1$s dari data di aplikasi.</string>
    <string name="export_dialog_title">Eksport Data Pemilih?</string>
    <string name="export_dialog_message">Semua data pemilih akan diekspor ke dalam format JSON. File gambar yang terkait dengan setiap data pemilih juga akan dipindahkan ke lokasi yang sama dengan file JSON tersebut.</string>

    <!--    response message-->
    <string name="permission_denied">Izin ditolak</string>
    <string name="failed_get_current_location">Gagal mendapatkan lokasi terkini</string>
    <string name="save_data_success">Data berhasil disimpan</string>
    <string name="save_data_failed">Gagal menyimpan data</string>
    <string name="nik_registered">NIK sudah terdaftar</string>
    <string name="nik_length_error">NIK kurang dari 16 karakter</string>
    <string name="nik_digit_error">NIK harus berupa angka</string>
    <string name="nik_cant_null">NIK tidak boleh kosong</string>
    <string name="delete_success">Data berhasil dihapus</string>
    <string name="delete_failed">Gagal menghapus data</string>
    <string name="convert_uri_fail">Terjadi kesalahan saat memasukkan file</string>
    <string name="file_uri_null">Lokasi file tidak ditemukan</string>
    <string name="same_data">Data sama persis dengan data yang ada</string>
    <string name="empty_file">Terjadi kesalahan saat membaca file</string>
    <string name="export_data_failed">Gagal melakukan ekspor data</string>
    <string name="image_processing_failed">Gagal memproses gambar</string>
</resources>