<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="16dp"
    tools:context=".view.ui.entryData.FormFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nik"
                style="@style/FormInput.EntryDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:enabled="false"
                android:hint="@string/nik"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insert_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/enter_nik"
                    android:inputType="number"
                    android:maxLength="18" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                style="@style/FormInput.EntryDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_nik">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insert_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:inputType="text|textPersonName|textCapSentences"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone"
                style="@style/FormInput.EntryDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:counterMaxLength="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insert_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_gender"
                style="@style/textView.sub.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintTop_toBottomOf="@id/layout_phone" />

            <RadioGroup
                android:id="@+id/gender_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gender">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:text="@string/male"
                    android:textColor="@color/grey_700" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:text="@string/female"
                    android:textColor="@color/grey_700" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_date"
                style="@style/FormInput.EntryDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:counterEnabled="false"
                app:endIconDrawable="@drawable/baseline_calendar_month_24"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_radio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insert_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/select_date"
                    android:inputType="datetime|date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_address"
                style="@style/FormInput.EntryDataLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:counterMaxLength="250"
                app:endIconDrawable="@drawable/baseline_location_pin_24"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insert_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/enter_address"
                    android:imeOptions="actionDone"
                    android:inputType="textLongMessage|textMultiLine|textCapSentences"
                    android:lineSpacingExtra="4sp"
                    android:maxLength="250"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_evidence_photo"
                style="@style/textView.sub.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evidence_process"
                app:layout_constraintTop_toBottomOf="@id/layout_address" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/insert_evidence_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_evidence_photo"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/img_broken_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/materialbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/submit_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/insert_evidence_photo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>