<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_container"
    tools:context=".view.ui.MainActivity">

    <TextView
        android:id="@+id/current_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="16dp"
        android:textColor="@color/grey_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_account">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/bottomdp">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorPrimary"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="500dp"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_informasi"
                        style="@style/materialTextListButtonIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/election_information"
                        app:icon="@drawable/outline_info_24" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_form_entry"
                        style="@style/materialTextListButtonIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/form_entry_data"
                        app:icon="@drawable/outline_description_24" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_lihat_data"
                        style="@style/materialTextListButtonIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_data"
                        app:icon="@drawable/outline_library_books_24" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_keluar"
                        style="@style/materialTextListButtonIcon.red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textColor="?attr/colorPrimary"
                        app:icon="@drawable/outline_logout_24" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>