<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close_btmsht"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_close_24"
        app:iconSize="24dp"
        app:iconTint="@color/grey_700"
        app:layout_constraintEnd_toStartOf="@+id/tittle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_image"
        android:textColor="@color/blue_grey_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/btn_close_btmsht"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_close_btmsht"
        app:layout_constraintTop_toTopOf="@+id/btn_close_btmsht" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_img"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_delete_outline_24"
        app:iconSize="24dp"
        app:iconTint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="@+id/tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tittle"
        app:layout_constraintTop_toTopOf="@+id/tittle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottomsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="16dp"
        app:constraint_referenced_ids="btn_close_btmsht, tittle, btn_delete_img" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottomsheet">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingBottom="16dp"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="8dp">

            <LinearLayout
                android:id="@+id/btn_open_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    app:contentPadding="16dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:srcCompat="@drawable/outline_photo_camera_24"
                    app:strokeWidth="1dp"
                    app:tint="?attr/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:labelFor="@id/btn_open_camera"
                    android:text="@string/from_camera"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_open_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    app:contentPadding="16dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:srcCompat="@drawable/outline_photo_24"
                    app:strokeWidth="1dp"
                    app:tint="?attr/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:labelFor="@id/btn_open_gallery"
                    android:text="@string/from_gallery"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.chip.ChipGroup>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>